# syncsignature

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
src/command_line/: CMakeLists.txt  treemin.cpp
src/join/tang/: binary_tree_converter.h  binary_tree_converter_impl.h  tang_join_ti_impl.h
src/join/tballjoin/: t_balljoin.h  t_balljoin_impl.h
src/join/tjoin/: label_set_converter_impl.h  label_set_element.h  t_join_ti.h  t_join_ti_impl.h
src/join/tminjoin/: t_minjoin.h  t_minjoin_impl.h
src/join/tpartjoin/: t_partjoin.h  t_partjoin_impl.h
src/node/: binary_node.h  binary_node_impl.h  node.h  node_impl.h
src/parser/: bracket_notation_parser.h  bracket_notation_parser_impl.h
src/ted/: ted_algorithm_touzet.h
src/ted_ub/: lgm_tree_index_impl.h
test/join/: ted_join_test.cc
